--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -66,7 +66,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[0].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[0].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[0].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[0].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[0].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -103,7 +103,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[1].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[1].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[1].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[1].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[1].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -140,7 +140,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[2].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[2].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[2].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[2].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[2].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -177,7 +177,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[3].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[3].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[3].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[3].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[3].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -216,7 +216,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[4].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[4].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[4].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[4].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[4].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -319,7 +319,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[5].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[5].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[5].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[5].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[5].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -358,7 +358,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[6].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[6].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[6].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[6].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[6].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -395,7 +395,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[7].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[7].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[7].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[7].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[7].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -434,7 +434,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[8].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[8].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[8].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[8].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[8].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -471,7 +471,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[9].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[9].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[9].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[9].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[9].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -508,7 +508,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[10].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[10].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[10].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[10].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[10].redStars[i][2] %></span>
                         </li>
                         <% } %>
@@ -545,7 +545,7 @@
                     <div class="lp_tdiv">
                         <% for (var i=0; i<data.twelveGongs[11].redStars.length; i++) { %>
                         <li><span style="color:#f30000;"><%= starList[data.twelveGongs[11].redStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[11].redStars[i][1] %>
+                            <br><span><%= data.twelveGongs[11].redStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[11].redStars[i][2] %></span>
                         </li>
                         <% } %>
