--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -72,13 +72,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[0].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[0].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[0].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[0].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[0].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[0].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[0].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[0].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[0].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[0].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -109,13 +109,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[1].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[1].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[1].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[1].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[1].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[1].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[1].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[1].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[1].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[1].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -146,13 +146,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[2].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[2].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[2].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[2].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[2].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[2].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[2].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[2].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[2].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[2].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -183,13 +183,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[3].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[3].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[3].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[3].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[3].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[3].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[3].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[3].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[3].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[3].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -222,13 +222,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[4].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[4].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[4].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[4].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[4].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[4].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[4].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[4].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[4].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[4].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -325,13 +325,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[5].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[5].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[5].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[5].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[5].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[5].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[5].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[5].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[5].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[5].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -364,13 +364,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[6].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[6].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[6].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[6].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[6].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[6].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[6].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[6].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[6].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[6].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -401,13 +401,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[7].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[7].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[7].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[7].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[7].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[7].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[7].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[7].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[7].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[7].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -440,13 +440,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[8].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[8].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[8].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[8].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[8].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[8].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[8].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[8].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[8].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[8].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -477,13 +477,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[9].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[9].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[9].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[9].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[9].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[9].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[9].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[9].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[9].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[9].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -514,13 +514,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[10].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[10].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[10].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[10].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[10].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[10].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[10].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[10].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[10].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[10].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
@@ -551,13 +551,13 @@
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[11].magentaStars.length; i++) { %>
                         <li><span style="color:#ff00ff;"><%= starList[data.twelveGongs[11].magentaStars[i][0]] %></span>
-                            <br><%= data.twelveGongs[11].magentaStars[i][1] %>
+                            <br><span><%= data.twelveGongs[11].magentaStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[11].magentaStars[i][2] %></span>
                         </li>
                         <% } %>
                         <% for (var i=0; i<data.twelveGongs[11].brownStars.length; i++) { %>
                         <li><span style="color:#996600;"><%= starList[data.twelveGongs[11].brownStars[i][0]] %></span>
-                        	<br><%= data.twelveGongs[11].brownStars[i][1] %>
+                        	<br><span><%= data.twelveGongs[11].brownStars[i][1] %></span>
                             <br><span class="FourStar"><%= data.twelveGongs[11].brownStars[i][2] %></span>
                       	</li>
                         <% } %>
