--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -86,7 +86,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[0].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[0].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[0].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[0].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[0].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[0].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[0].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[0].blueStars[i]] %><% } %></span></li>
@@ -123,7 +123,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[1].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[1].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[1].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[1].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[1].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[1].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[1].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[1].blueStars[i]] %><% } %></span></li>
@@ -160,7 +160,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[2].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[2].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[2].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[2].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[2].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[2].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[2].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[2].blueStars[i]] %><% } %></span></li>
@@ -197,7 +197,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[3].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[3].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[3].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[3].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[3].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[3].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[3].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[3].blueStars[i]] %><% } %></span></li>
@@ -236,7 +236,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[4].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[4].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[4].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[4].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[4].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[4].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[4].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[4].blueStars[i]] %><% } %></span></li>
@@ -339,7 +339,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[5].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[5].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[5].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[5].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[5].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[5].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[5].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[5].blueStars[i]] %><% } %></span></li>
@@ -378,7 +378,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[6].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[6].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[6].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[6].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[6].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[6].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[6].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[6].blueStars[i]] %><% } %></span></li>
@@ -415,7 +415,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[7].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[7].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[7].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[7].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[7].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[7].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[7].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[7].blueStars[i]] %><% } %></span></li>
@@ -454,7 +454,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[8].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[8].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[8].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[8].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[8].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[8].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[8].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[8].blueStars[i]] %><% } %></span></li>
@@ -491,7 +491,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[9].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[9].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[9].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[9].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[9].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[9].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[9].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[9].blueStars[i]] %><% } %></span></li>
@@ -528,7 +528,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[10].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[10].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[10].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[10].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[10].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[10].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[10].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[10].blueStars[i]] %><% } %></span></li>
@@ -565,7 +565,7 @@
                     <div class="lp_bdiv">
                         <div class="lp_star">
 	                        <% for (var i=0; i<data.twelveGongs[11].cyanStars.length; i++) { %>
-	                        <li><span style="color:#009999;"><% if (data.twelveGongs[11].cyanStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[11].cyanStars[i]] %><% } %></span></li>
+	                        <li><span style="color:#009999;"><% if (data.twelveGongs[11].cyanStars[i] == 64) { %>博士<% } else { %><%= data.twelveGongs[11].cyanStars[i] %><% } %></span></li>
 	                        <% } %>
 	                        <% for (var i=0; i<data.twelveGongs[11].blueStars.length; i++) { %>
 	                        <li><span style="color:#000099;"><% if (data.twelveGongs[11].blueStars[i] == 64) { %>博士<% } else { %><%= starList[data.twelveGongs[11].blueStars[i]] %><% } %></span></li>
