remove minggongzai shengongzai

--- a/src/server/views/ZiWeiPan.ejs
+++ b/src/server/views/ZiWeiPan.ejs
@@ -306,7 +306,7 @@
                             </li>
                             <li>命主:<span style="color:rgb(173, 3, 253);"><%= data.centerGong.命主 %></span>&nbsp;&nbsp;身主:<span style="color:rgb(173, 3, 253);"><%= data.centerGong.身主 %></span>
                             </li>
-                            <li>子斗在:<span style="color:rgb(253, 3, 3);"><%= data.centerGong.子斗在 %></span>&nbsp;&nbsp;身宫在:<span style="color:rgb(253, 3, 3);"><%= data.centerGong.身宫在 %></span>&nbsp;&nbsp;命宫在:<span style="color:rgb(253, 3, 3);"><%= data.centerGong.命宫在 %></span>
+                            <li>子斗在:<span style="color:rgb(253, 3, 3);"><%= data.centerGong.子斗在 %></span>
                             </li>
                             <li id='scbz'>
                                 
