--- a/src/server/public/css/main.css
+++ b/src/server/public/css/main.css
@@ -30,7 +30,8 @@ body {
 }/*#ljms_DIV_1*/
 
 #ljms_DIV_2 {
-    background-image: url(/img/cs_main_tbg.png);
+    margin: 0px auto;
+    background-image: url(./img/cs_main_tbg.png);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     font-family: 'Times New Roman';
@@ -42,7 +43,7 @@ body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     transform-origin: 177px 178px;
     -webkit-transform-origin: 177px 178px;
-    background: rgba(0, 0, 0, 0) url(/img/cs_main_tbg.png) no-repeat scroll 50% 50% / auto padding-box border-box;
+    background: rgba(0, 0, 0, 0) url(./img/cs_main_tbg.png) no-repeat scroll 50% 50% / auto padding-box border-box;
     font: normal normal normal normal 12px/normal 'Times New Roman';
 }/*#ljms_DIV_2*/
 
@@ -308,7 +309,7 @@ body {
 }/*#ljms_LABEL_15*/
 
 #ljms_INPUT_16 {
-    background-image: url(/img/datePicker.gif);
+    background-image: url(./img/datePicker.gif);
     background-position: 100% 50%;
     background-repeat: no-repeat;
     border-bottom-color: rgb(153, 153, 153);
@@ -340,7 +341,7 @@ body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     transform-origin: 58.5px 12px;
     -webkit-transform-origin: 58.5px 12px;
-    background: rgb(255, 255, 255) url(/img/datePicker.gif) no-repeat scroll 100% 50% / auto padding-box border-box;
+    background: rgb(255, 255, 255) url(./img/datePicker.gif) no-repeat scroll 100% 50% / auto padding-box border-box;
     border: 1px solid rgb(153, 153, 153);
     border-top: 1px solid rgb(153, 153, 153);
     border-right: 1px solid rgb(153, 153, 153);
@@ -557,5 +558,16 @@ body {
 }
 
 
+.second-row {
+    margin: 0px auto;
+    width: 354px;
+    padding: 0;
+}
 
-
+.pan-img {
+    cursor:pointer; 
+    margin: 10px;
+    width: 98px;
+    height: 44px;
+    float: left;
+}
